--- a/index.html
+++ b/index.html
@@ -1,39 +1,22 @@
-<!-- index.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AutoAgent AI</title>
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<header>
-<nav>
-<h1>AutoAgent AI</h1>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="services.html">Services</a></li>
-<li><a href="demo.html">Demo</a></li>
-<li><a href="pricing.html">Pricing</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
-</nav>
-</header>
-
 <main>
 <section class="hero">
-<h2>The Future of Business Automation</h2>
-<p>Automate Anything. Build Everything. Experience AutoAgent AI.</p>
+<h2>Automate the Future</h2>
+<p>Intelligent AI solutions. Custom CRMs. Endless possibilities.</p>
 <a href="contact.html" class="cta-button">Get Started</a>
 </section>
+
+<section class="features">
+<div class="feature-card">
+<h3>AI Automations</h3>
+<p>Streamline workflows and save hours with AI-powered automations.</p>
+</div>
+<div class="feature-card">
+<h3>Custom CRMs</h3>
+<p>Tailored CRM that adapts perfectly to your business.</p>
+</div>
+<div class="feature-card">
+<h3>Integration Solutions</h3>
+<p>Connect all your tools seamlessly and boost efficiency.</p>
+</div>
+</section>
 </main>
-
-<footer>
-© 2025 AutoAgent AI. All rights reserved.
-</footer>
-
-<script src="js/main.js"></script>
-</body>
-</html>
