--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AutoAgent AI</title>
+<link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+<header>
+<nav>
+<h1 class="logo">AutoAgent AI</h1>
+<ul>
+<li><a href="index.html" class="active">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="services.html">Services</a></li>
+<li><a href="demo.html">Demo</a></li>
+<li><a href="pricing.html">Pricing</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+</nav>
+</header>
+
 <main>
 <section class="hero">
 <h2>Automate the Future</h2>
@@ -19,4 +45,13 @@
 <p>Connect all your tools seamlessly and boost efficiency.</p>
 </div>
 </section>
+
 </main>
+
+<footer>
+<p>© 2025 AutoAgent AI. All rights reserved.</p>
+</footer>
+
+<script src="js/main.js"></script>
+</body>
+</html>
