--- a/index.html
+++ b/index.html
@@ -1,57 +1,54 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AutoAgent AI</title>
-<link rel="stylesheet" href="css/style.css">
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AutoAgent AI — Automate the Future</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <nav class="navbar">
+      <div class="logo">AutoAgent AI</div>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="demo.html">Demo</a></li>
+        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<header>
-<nav>
-<h1 class="logo">AutoAgent AI</h1>
-<ul>
-<li><a href="index.html" class="active">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="services.html">Services</a></li>
-<li><a href="demo.html">Demo</a></li>
-<li><a href="pricing.html">Pricing</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
-</nav>
-</header>
+  <main>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Automate the Future</h1>
+        <p>Intelligent AI‑powered automations and custom CRMs — built for tomorrow.</p>
+        <a href="contact.html" class="cta">Get Started</a>
+      </div>
+    </section>
 
-<main>
-<section class="hero">
-<h2>Automate the Future</h2>
-<p>Intelligent AI solutions. Custom CRMs. Endless possibilities.</p>
-<a href="contact.html" class="cta-button">Get Started</a>
-</section>
+    <section class="features">
+      <div class="feature">
+        <h3>AI Automations</h3>
+        <p>Streamline workflows and save hours with smart automations.</p>
+      </div>
+      <div class="feature">
+        <h3>Custom CRMs</h3>
+        <p>CRMs tailored perfectly to your business needs.</p>
+      </div>
+      <div class="feature">
+        <h3>Tool Integrations</h3>
+        <p>Connect everything smoothly — data, workflows, team tools, all in sync.</p>
+      </div>
+    </section>
+  </main>
 
-<section class="features">
-<div class="feature-card">
-<h3>AI Automations</h3>
-<p>Streamline workflows and save hours with AI-powered automations.</p>
-</div>
-<div class="feature-card">
-<h3>Custom CRMs</h3>
-<p>Tailored CRM that adapts perfectly to your business.</p>
-</div>
-<div class="feature-card">
-<h3>Integration Solutions</h3>
-<p>Connect all your tools seamlessly and boost efficiency.</p>
-</div>
-</section>
-
-</main>
-
-<footer>
-<p>© 2025 AutoAgent AI. All rights reserved.</p>
-</footer>
-
-<script src="js/main.js"></script>
+  <footer>
+    <p>© 2025 AutoAgent AI — All rights reserved.</p>
+  </footer>
 </body>
 </html>
