--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AutoAgent AI — Automate the Future</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AutoAgent AI — Futuristic Automation</title>
+<link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">AutoAgent AI</div>
-      <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="demo.html">Demo</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
-    <section class="hero">
-      <div class="hero-text">
-        <h1>Automate the Future</h1>
-        <p>Intelligent AI‑powered automations and custom CRMs — built for tomorrow.</p>
-        <a href="contact.html" class="cta">Get Started</a>
-      </div>
-    </section>
+<header>
+  <nav class="navbar">
+    <img src="images/autoagent-logo.png" alt="AutoAgent AI Logo" class="logo">
+    <ul class="nav-links">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
-    <section class="features">
-      <div class="feature">
-        <h3>AI Automations</h3>
-        <p>Streamline workflows and save hours with smart automations.</p>
-      </div>
-      <div class="feature">
-        <h3>Custom CRMs</h3>
-        <p>CRMs tailored perfectly to your business needs.</p>
-      </div>
-      <div class="feature">
-        <h3>Tool Integrations</h3>
-        <p>Connect everything smoothly — data, workflows, team tools, all in sync.</p>
-      </div>
-    </section>
-  </main>
+<main>
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Automate the Future</h1>
+      <p>AI-powered solutions and custom CRMs designed for tomorrow.</p>
+      <a href="contact.html" class="cta">Get Started</a>
+    </div>
+  </section>
 
-  <footer>
-    <p>© 2025 AutoAgent AI — All rights reserved.</p>
-  </footer>
+  <section class="features">
+    <div class="feature">
+      <h3>AI Automations</h3>
+      <p>Streamline workflows and save hours with smart AI automations.</p>
+    </div>
+    <div class="feature">
+      <h3>Custom CRMs</h3>
+      <p>Tailored CRM solutions that fit your business perfectly.</p>
+    </div>
+    <div class="feature">
+      <h3>Integrations</h3>
+      <p>Connect your tools seamlessly to boost productivity.</p>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <p>© 2025 AutoAgent AI. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
