--- a/index.html
+++ b/index.html
@@ -1,49 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AutoAgent AI — Automate the Future</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">AutoAgent AI</div>
-      <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="demo.html">Demo</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+  <header class="navbar">
+    <div class="logo">AutoAgent AI</div>
+    <nav class="nav-links">
+      <a href="index.html" class="active">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <div class="hero-overlay"></div>
-      <div class="hero-content">
-        <h1>Automate the Future</h1>
-        <p>AI‑powered automations and custom CRMs — built for tomorrow.</p>
-        <a href="contact.html" class="cta-button">Get Started</a>
-      </div>
+      <h1>Automate the Future</h1>
+      <p>AI-powered automations and custom CRMs built for tomorrow.</p>
+      <a href="contact.html" class="cta">Get Started</a>
     </section>
 
     <section class="features">
-      <div class="feature-card">
-        <h3>AI Automations</h3>
-        <p>Cut down manual work — let AI handle the repetitive tasks for you.</p>
+      <div class="feature">
+        <h2>AI Automations</h2>
+        <p>Streamline repetitive tasks with intelligent AI workflows.</p>
       </div>
-      <div class="feature-card">
-        <h3>Custom CRMs</h3>
-        <p>CRMs tailored to your business — structured how you need it.</p>
+      <div class="feature">
+        <h2>Custom CRMs</h2>
+        <p>Create CRM systems tailored specifically to your business.</p>
       </div>
-      <div class="feature-card">
-        <h3>Integration Solutions</h3>
-        <p>Connect your tools seamlessly — unify workflows and data.</p>
+      <div class="feature">
+        <h2>Seamless Integrations</h2>
+        <p>Connect your tools and data effortlessly across platforms.</p>
       </div>
     </section>
   </main>
