--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AutoAgent AI — Automate the Future</title>
+  <title>AutoAgent AI — Futuristic AI Solutions</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Navbar -->
   <header class="navbar">
     <div class="logo">AutoAgent AI</div>
     <nav class="nav-links">
@@ -18,29 +19,40 @@
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-overlay"></div>
+    <div class="hero-content">
       <h1>Automate the Future</h1>
       <p>AI-powered automations and custom CRMs built for tomorrow.</p>
       <a href="contact.html" class="cta">Get Started</a>
-    </section>
+    </div>
+  </section>
 
-    <section class="features">
-      <div class="feature">
-        <h2>AI Automations</h2>
-        <p>Streamline repetitive tasks with intelligent AI workflows.</p>
-      </div>
-      <div class="feature">
-        <h2>Custom CRMs</h2>
-        <p>Create CRM systems tailored specifically to your business.</p>
-      </div>
-      <div class="feature">
-        <h2>Seamless Integrations</h2>
-        <p>Connect your tools and data effortlessly across platforms.</p>
-      </div>
-    </section>
-  </main>
+  <!-- Services Section -->
+  <section class="services">
+    <div class="service-card">
+      <h2>AI Automations</h2>
+      <p>Streamline repetitive tasks using intelligent AI workflows.</p>
+    </div>
+    <div class="service-card">
+      <h2>Custom CRMs</h2>
+      <p>Create CRM systems tailored specifically to your business needs.</p>
+    </div>
+    <div class="service-card">
+      <h2>Integration Solutions</h2>
+      <p>Connect your tools seamlessly and unify your data effortlessly.</p>
+    </div>
+  </section>
 
+  <!-- About / Mission Section -->
+  <section class="about">
+    <h2>Our Mission</h2>
+    <p>At AutoAgent AI, we aim to transform the way businesses operate by leveraging the power of artificial intelligence. Our solutions save time, increase efficiency, and allow companies to focus on what really matters: growth and innovation.</p>
+    <p>We combine cutting-edge technology with customized CRM solutions to create tools that adapt perfectly to your workflow, ensuring maximum productivity and long-term success.</p>
+  </section>
+
+  <!-- Footer -->
   <footer>
     <p>© 2025 AutoAgent AI. All rights reserved.</p>
   </footer>
