--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
   <!-- Navbar -->
   <header class="navbar">
-    <div class="logo">AutoAgent AI</div>
+    <div class="logo">
+      <img src="images/autoagent-logo.png" alt="AutoAgent AI Logo">
+    </div>
     <nav class="nav-links">
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
@@ -20,7 +22,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero">
+  <section class="hero fade-in-section">
     <div class="hero-overlay"></div>
     <div class="hero-content">
       <h1>Automate the Future</h1>
@@ -30,7 +32,7 @@
   </section>
 
   <!-- Services Section -->
-  <section class="services">
+  <section class="services fade-in-section">
     <div class="service-card">
       <h2>AI Automations</h2>
       <p>Streamline repetitive tasks using intelligent AI workflows.</p>
@@ -46,15 +48,20 @@
   </section>
 
   <!-- About / Mission Section -->
-  <section class="about">
+  <section class="about fade-in-section">
     <h2>Our Mission</h2>
     <p>At AutoAgent AI, we aim to transform the way businesses operate by leveraging the power of artificial intelligence. Our solutions save time, increase efficiency, and allow companies to focus on what really matters: growth and innovation.</p>
     <p>We combine cutting-edge technology with customized CRM solutions to create tools that adapt perfectly to your workflow, ensuring maximum productivity and long-term success.</p>
   </section>
 
   <!-- Footer -->
-  <footer>
+  <footer class="fade-in-section">
     <p>© 2025 AutoAgent AI. All rights reserved.</p>
   </footer>
+
+  <!-- Mouse Glow -->
+  <div class="cursor-glow"></div>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
